Micro tweaks of the reflect restorer system